--- a/source/Makefile.linux
+++ b/source/Makefile.linux
@@ -65,52 +65,57 @@ endif
 # -------------------------------------------------------------
 
 %.o : %.c
-	$(CC) $(INCLUDE) $(CFLAGS) -o$@ $<
+	$(CC) $(CFLAGS) $(INCLUDE) -o$@ $<
 
 
-%.h : %.md
-	$(QGP) -c $< $@
 
 # -------------------------------------------------------------
 #               Project
 # -------------------------------------------------------------
 
 OBJLIST_BMDEBUG = bmdebug.o armdisasm.o bmcommon.o bmp-scan.o bmp-script.o \
-                  demangle.o dwarf.o elf.o guidriver.o mcu-info.o memdump.o \
-                  minIni.o nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
-                  nuklear_tooltip.o pathsearch.o rs232.o serialmon.o specialfolder.o \
-                  svd-support.o swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
-                  findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+                  decodectf.o demangle.o dwarf.o elf.o \
+                  guidriver.o mcu-info.o memdump.o minIni.o nuklear.o \
+                  nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
+                  nuklear_tooltip.o osdialog.o parsetsdl.o pathsearch.o \
+                  rs232.o serialmon.o specialfolder.o svd-support.o \
+                  swotrace.o tcpip.o xmltractor.o \
+                  findfont.o lodepng.o nuklear_glfw_gl2.o osdialog_gtk3.o
 
 OBJLIST_BMFLASH = bmflash.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
-                  cksum.o crc32.o elf.o gdb-rsp.o guidriver.o ident.o minIni.o \
-                  nuklear_guide.o nuklear_mousepointer.o nuklear_style.o nuklear_tooltip.o \
-                  rs232.o specialfolder.o tcl.o tcpip.o xmltractor.o \
-                  findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+                  cksum.o crc32.o elf.o fileloader.o \
+                  gdb-rsp.o guidriver.o ident.o mcu-info.o minIni.o \
+                  nuklear.o nuklear_guide.o nuklear_mousepointer.o \
+                  nuklear_style.o nuklear_tooltip.o osdialog.o rs232.o \
+                  specialfolder.o tcl.o tcpip.o xmltractor.o \
+                  findfont.o lodepng.o nuklear_glfw_gl2.o osdialog_gtk3.o
 
 OBJLIST_BMPROFILE = bmprofile.o bmcommon.o bmp-scan.o bmp-script.o \
-                    bmp-support.o crc32.o decodectf.o demangle.o dwarf.o \
-                    elf.o gdb-rsp.o guidriver.o mcu-info.o minIni.o \
-                    parsetsdl.o rs232.o specialfolder.o swotrace.o \
-                    tcpip.o xmltractor.o nuklear_guide.o nuklear_mousepointer.o \
-                    nuklear_splitter.o nuklear_style.o nuklear_tooltip.o \
-                    findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+                    bmp-support.o crc32.o decodectf.o \
+                    demangle.o dwarf.o elf.o fileloader.o gdb-rsp.o \
+                    guidriver.o mcu-info.o minIni.o nuklear.o nuklear_guide.o \
+                    nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
+                    nuklear_tooltip.o osdialog.o parsetsdl.o rs232.o \
+                    specialfolder.o swotrace.o tcpip.o xmltractor.o \
+                    findfont.o lodepng.o nuklear_glfw_gl2.o osdialog_gtk3.o
 
-OBJLIST_BMSERIAL = bmserial.o guidriver.o minIni.o rs232.o \
-                   specialfolder.o noc_file_dialog.o \
-                   nuklear_guide.o nuklear_mousepointer.o nuklear_splitter.o \
-                   nuklear_style.o nuklear_tooltip.o tcl.o \
-                   findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o
+OBJLIST_BMSERIAL = bmserial.o guidriver.o minIni.o nuklear.o nuklear_guide.o \
+                   nuklear_mousepointer.o nuklear_splitter.o nuklear_style.o \
+                   nuklear_tooltip.o osdialog.o rs232.o specialfolder.o tcl.o \
+                   findfont.o lodepng.o nuklear_glfw_gl2.o osdialog_gtk3.o
 
 OBJLIST_BMTRACE = bmtrace.o bmcommon.o bmp-scan.o bmp-script.o bmp-support.o \
-                  crc32.o demangle.o dwarf.o elf.o gdb-rsp.o guidriver.o mcu-info.o \
-                  minIni.o nuklear_guide.o nuklear_mousepointer.o nuklear_splitter.o \
-                  nuklear_style.o nuklear_tooltip.o rs232.o specialfolder.o \
-                  swotrace.o tcpip.o xmltractor.o decodectf.o parsetsdl.o \
-                  findfont.o lodepng.o nuklear.o nuklear_glfw_gl2.o noc_file_dialog.o
+                  crc32.o decodectf.o demangle.o dwarf.o \
+                  elf.o fileloader.o gdb-rsp.o guidriver.o mcu-info.o \
+                  minIni.o nuklear.o nuklear_guide.o nuklear_mousepointer.o \
+                  nuklear_splitter.o nuklear_style.o nuklear_tooltip.o \
+                  osdialog.o parsetsdl.o rs232.o specialfolder.o swotrace.o \
+                  tcpip.o xmltractor.o \
+                  findfont.o lodepng.o nuklear_glfw_gl2.o osdialog_gtk3.o
 
-OBJLIST_BMSCAN = bmscan.o bmp-scan.o bmp-script.o bmp-support.o crc32.o elf.o \
-                 gdb-rsp.o rs232.o specialfolder.o tcpip.o xmltractor.o
+OBJLIST_BMSCAN = bmscan.o bmp-scan.o bmp-script.o bmp-support.o \
+                 crc32.o elf.o fileloader.o gdb-rsp.o \
+                 rs232.o specialfolder.o tcpip.o xmltractor.o
 
 OBJLIST_CALLTREE = calltree.o
 
@@ -122,7 +127,7 @@ OBJLIST_TRACEGEN = tracegen.o parsetsdl.o
 project: bmdebug bmflash bmprofile bmscan bmserial bmtrace calltree elf-postlink tracegen
 
 depend :
-	makedepend -b -fmakefile.dep $(OBJLIST_BMDEBUG:.o=.c) $(OBJLIST_BMFLASH:.o=.c) \
+	makedepend -b -e -fmakefile.dep $(OBJLIST_BMDEBUG:.o=.c) $(OBJLIST_BMFLASH:.o=.c) \
                    $(OBJLIST_BMPROFILE:.o=.c) $(OBJLIST_BMSCAN:.o=.c) \
                    $(OBJLIST_BMSERIAL:.o=.c) $(OBJLIST_BMTRACE:.o=.c) \
                    $(OBJLIST_CALLTREE:.o=.c) $(OBJLIST_POSTLINK:.o=.c) \
@@ -169,6 +174,8 @@ elf.o : elf.c
 
 elf-postlink.o : elf-postlink.c
 
+fileloader.o : fileloader.c
+
 findfont.o : findfont.c
 
 gdb-rsp.o : gdb-rsp.c
@@ -185,9 +192,10 @@ memdump.o : memdump.c
 
 minIni.o : minIni.c
 
-noc_file_dialog.o : CFLAGS += -DNOC_FILE_DIALOG_GTK
-noc_file_dialog.o : INCLUDE += `pkg-config --cflags gtk+-3.0`
-noc_file_dialog.o : noc_file_dialog.c
+osdialog.o : osdialog.c
+
+osdialog_gtk3.o : INCLUDE += `pkg-config --cflags gtk+-3.0`
+osdialog_gtk3.o : osdialog_win.c
 
 nuklear_guide.o : nuklear_guide.c
 
@@ -213,9 +221,9 @@ svd-support.o : svd-support.c
 
 swotrace.o : swotrace.c
 
-tcpip.o : tcpip.c
-
 tcl.o : tcl.c
+
+tcpip.o : tcpip.c
 
 tracegen.o : tracegen.c
 
