--- a/source/.vscode/launch.json
+++ b/source/.vscode/launch.json
@@ -25,6 +25,26 @@
             ]
         },
         {
+            "name": "Linux bmdebug",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/bmdebug",
+            "args": [],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "miDebuggerPath": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "Launch bmtrace.exe",
             "type": "cppdbg",
             "request": "launch",
